--- a/client/src/layouts/HeaderLayout.module.css
+++ b/client/src/layouts/HeaderLayout.module.css
@@ -6,6 +6,7 @@
     top: 4rem;
     padding: 1rem;
     z-index: 2;
+    color: var(--text-prim);
     background-color: var(--background-prim);
     border-bottom: 1px solid var(--main);
 }
